<?xml version="1.0"?>
<package>
    <name>mitsubishi_controller</name>
    <version>0.0.0</version>
    <description>The mitsubishi_controller package</description>

    <maintainer email="vladko.petrik@gmail.com">Vladimir Petrik</maintainer>
    <license>BSD</license>
    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>roscpp</build_depend>
    <run_depend>roscpp</run_depend>

</package>
